# mcp-local-dev

./: .coverage  .gitignore  CONVENTIONS.md  README.md  pyproject.toml  pytest.ini
fixtures_data/javascript/jest-project/: package-lock.json  package.json
fixtures_data/javascript/jest-project/tests/: core.test.js
fixtures_data/javascript/vitest-project/: bun.lockb  bunfig.toml  package.json
fixtures_data/javascript/vitest-project/src/: core.js
fixtures_data/javascript/vitest-project/tests/: core.test.js
fixtures_data/python/pytest-project/: pyproject.toml
fixtures_data/python/pytest-project/src/example/: __init__.py  core.py
fixtures_data/python/pytest-project/tests/: conftest.py  test_core.py
fixtures_data/python/unittest-project/: pyproject.toml
fixtures_data/python/unittest-project/tests/: test_core.py
src/mcp_local_dev/: logging.py  server.py  types.py
src/mcp_local_dev/environments/: environment.py
src/mcp_local_dev/runtimes/: bun.py  node.py  python.py  runtime.py
src/mcp_local_dev/sandboxes/: commands.py  git.py  sandbox.py
src/mcp_local_dev/test_runners/: execution.py  jest.py  pytest.py  results.py  runners.py  unittest.py  vitest.py
src/mcp_local_dev/utils/: __init__.py
src/mcp_runtime_server/: __init__.py  commands.py  detection.py  environments.py  errors.py  execution.py  frameworks.py  git.py  logging.py  managers.py  runtime.py  server.py  testing.py  types.py  utils.py
src/mcp_runtime_server/binaries/: __init__.py  binary_info.py  cache.py  constants.py  fetcher.py  platforms.py  releases.py
src/mcp_runtime_server/environments/: __init__.py  cache.py  commands.py  environment.py  platforms.py  runtime.py  runtime_binaries.py  sandbox.py
src/mcp_runtime_server/runtimes/: binaries.py  node.py  python.py  runtime.py
src/mcp_runtime_server/sandbox/: __init__.py  environment.py  security.py
src/mcp_runtime_server/sandboxes/: cache.py  commands.py  git.py  platforms.py  sandbox.py
src/mcp_runtime_server/test_runners/: __init__.py  execution.py  results.py  validation.py
src/mcp_runtime_server/testing/: __init__.py  execution.py  frameworks.py  pytest.py  results.py  test_runners.py  validation.py
src/mcp_runtime_server/utils/: fetching.py  fs.py  generic.py
test_data/pytest/: sample_conftest.py
tests/: conftest.py  test_detection.py  test_environment.py  test_frameworks.py  test_git.py  test_logging.py  test_managers.py  test_results.py  test_runners.py  test_runtime.py  test_sandbox.py  test_sandbox_integration.py  test_server.py  test_utils.py
tests/environments/: test_commands.py  test_environment.py  test_execution.py  test_git.py  test_runtime.py  test_runtime_binaries.py  test_sandbox.py
tests/testing/: test_execution.py  test_frameworks.py  test_results.py  test_validation.py
