[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-runtime-server"
version = "0.1.0"
description = "Model Context Protocol Runtime Server - A secure sandbox for managing runtime environments"
authors = [
    {name = "MCP Contributors", email = "info@modelcontextprotocol.io"}
]
requires-python = ">=3.12,<=3.13"
dependencies = [
    "mcp@git+https://github.com/modelcontextprotocol/python-sdk",
    "aiohttp==3.11.11",
    "psutil==6.1.1",
    "appdirs==1.4.4"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "black",
    "mypy",
    "ruff"
]

[project.scripts]
mcp-runtime-server = "mcp_runtime_server.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=mcp_runtime_server --cov-report=term-missing"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"