[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-runtime-server"
version = "0.1.0"
description = "Model Context Protocol Runtime Server - A secure sandbox for managing runtime environments"
authors = [
    {name = "MCP Contributors", email = "info@modelcontextprotocol.io"}
]
requires-python = ">=3.12,<=3.13"
dependencies = [
    "mcp@git+https://github.com/modelcontextprotocol/python-sdk",
    "aiohttp==3.11.11",
    "psutil==6.1.1",
    "appdirs==1.4.4",
    "fuuid>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "black",
    "mypy",
    "ruff"
]

[project.scripts]
mcp-runtime-server = "mcp_runtime_server.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff-lsp>=0.0.59",
]
